# rust-asterisk-manager

./: .env.example  AUTHORS  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: INSTANCE_ID.md  README.md  RESILIENT_EXAMPLE.md  actix_web_example.rs  actix_web_resilient_example.rs  basic_usage.rs  cluster_example.rs  multiple_managers_logging.rs  roundtrip_demo.rs  watchdog_resilient_logging.rs
src/: lib.rs  resilient.rs
src/cluster/: event.rs  manager.rs  mod.rs  node.rs  tests.rs
